--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 		</dependency>
 	</dependencies>
 
+	<distributionManagement>
+		<repository>
+			<id>deployementRepo</id>
+			<name>NoteApp-Backend</name>
+			<url>http://192.168.33.10:8081/repository/NoteApp-Backend/</url>
+		</repository>
+	</distribuationManagement>	
 	<build>
 		<plugins>
 			<plugin>
