--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 	<distributionManagement>
 		<repository>
 			<id>deployementRepo</id>
-			<name>NoteApp-Backend</name>
+			<name>NexusRepository</name>
 			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
