--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
 
 	<distributionManagement>
 		<repository>
-			<id>deployementRepo</id>
-			<name>NexusRepository</name>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
 			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
